--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-<form action="#" method="post">
+<form action="" method="post">
     <p>Name : </p>
     <p><input type="text" name="nm"></p>
     <input type="submit" value="submit">
